force-app/main/default/objects/Entity__c/fields/Bank_Account_1__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account 1</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>