force-app/main/default/objects/Entity__c/fields/Bank_Account_2__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account 2</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Entities (Bank Account 2)</relationshipLabel>
    <relationshipName>Entities1</relationshipName>
    <type>Lookup</type>
</CustomField>