force-app/main/default/objects/Entity__c/fields/Billing_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Entity Name</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>