force-app/main/default/objects/Entity__c/fields/BVC_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_Company_ID__c</fullName>
    <label>BVC Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>