force-app/main/default/objects/Entity__c/fields/CIN_Number__c.field-meta.xml
<CustomField>
    <fullName>CIN_Number__c</fullName>
    <label>CIN Number</label>
    <length>21</length>
    <type>Text</type>
</CustomField>