force-app/main/default/objects/Entity__c/fields/COA_Entity__c.field-meta.xml
<CustomField>
    <fullName>COA_Entity__c</fullName>
    <label>COA Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>