force-app/main/default/objects/Entity__c/fields/COA_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>COA_Entity_Code__c</fullName>
    <label>COA Entity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>