force-app/main/default/objects/Entity__c/fields/Contract_Signatory_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signatory_1__c</fullName>
    <label>Contract Signatory 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>