force-app/main/default/objects/Entity__c/fields/Contract_Signatory_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signatory_1_Email__c</fullName>
    <label>Contract Signatory 1 Email</label>
    <type>Email</type>
</CustomField>