force-app/main/default/objects/Entity__c/fields/Contract_Signatory_2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signatory_2__c</fullName>
    <label>Contract Signatory 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>