force-app/main/default/objects/Entity__c/fields/Contract_Signatory_2_Designation__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signatory_2_Designation__c</fullName>
    <label>Contract Signatory 2 Designation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>