force-app/main/default/objects/Entity__c/fields/Contract_Signatory_2_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signatory_2_Phone__c</fullName>
    <label>Contract Signatory 2 Phone</label>
    <type>Phone</type>
</CustomField>