force-app/main/default/objects/Entity__c/fields/Corporate_Office_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Office_Address_Line_1__c</fullName>
    <label>Corporate Office Address Line 1</label>
    <type>TextArea</type>
</CustomField>