force-app/main/default/objects/Entity__c/fields/Corporate_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Office_Address_Line_2__c</fullName>
    <label>Corporate Office Address Line 2</label>
    <type>TextArea</type>
</CustomField>