force-app/main/default/objects/Entity__c/fields/Corporate_Office_City__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Office_City__c</fullName>
    <formula>TEXT(Corporate_Office_Pincode__r.City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Office City</label>
    <type>Text</type>
</CustomField>