force-app/main/default/objects/Entity__c/fields/Corporate_Office_Country__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Office_Country__c</fullName>
    <formula>Corporate_Office_Pincode__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Office Country</label>
    <type>Text</type>
</CustomField>