force-app/main/default/objects/Entity__c/fields/Corporate_Office_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Office_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Office Pincode</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Entities (Corporate Office Pincode)</relationshipLabel>
    <relationshipName>Entities1</relationshipName>
    <type>Lookup</type>
</CustomField>