force-app/main/default/objects/Entity__c/fields/Corporate_Office_State__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Office_State__c</fullName>
    <formula>Corporate_Office_Pincode__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Office State</label>
    <type>Text</type>
</CustomField>