force-app/main/default/objects/Entity__c/fields/Customer_Care_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Number__c</fullName>
    <label>Customer Care Number</label>
    <type>Phone</type>
</CustomField>