force-app/main/default/objects/Entity__c/fields/Email_2__c.field-meta.xml
<CustomField>
    <fullName>Email_2__c</fullName>
    <label>Email 2</label>
    <type>Email</type>
</CustomField>