force-app/main/default/objects/Entity__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <label>GSTIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>