force-app/main/default/objects/Entity__c/fields/ITR_Acknowledgement_Number_2__c.field-meta.xml
<CustomField>
    <fullName>ITR_Acknowledgement_Number_2__c</fullName>
    <label>ITR Acknowledgement Number 2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>