force-app/main/default/objects/Entity__c/fields/ITR_Filing_Date_1__c.field-meta.xml
<CustomField>
    <fullName>ITR_Filing_Date_1__c</fullName>
    <label>ITR Filing Date 1</label>
    <type>Date</type>
</CustomField>