force-app/main/default/objects/Entity__c/fields/ITR_Filing_Date_2__c.field-meta.xml
<CustomField>
    <fullName>ITR_Filing_Date_2__c</fullName>
    <label>ITR Filing Date 2</label>
    <type>Date</type>
</CustomField>