force-app/main/default/objects/Entity__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>