force-app/main/default/objects/Entity__c/fields/Logo_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_Image_URL__c</fullName>
    <label>Logo Image URL</label>
    <type>TextArea</type>
</CustomField>