force-app/main/default/objects/Entity__c/fields/MSME_Registration__c.field-meta.xml
<CustomField>
    <fullName>MSME_Registration__c</fullName>
    <label>MSME Registration</label>
    <length>25</length>
    <type>Text</type>
</CustomField>