force-app/main/default/objects/Entity__c/fields/MSME_Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MSME_Registration_Start_Date__c</fullName>
    <label>MSME Registration Start Date</label>
    <type>Date</type>
</CustomField>