force-app/main/default/objects/Entity__c/fields/Oracle_BVC_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_BVC_Company_ID__c</fullName>
    <label>Oracle BVC Company ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>