force-app/main/default/objects/Entity__c/fields/Registered_Office_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Address_Line_2__c</fullName>
    <label>Registered Office Address Line 2</label>
    <type>TextArea</type>
</CustomField>