force-app/main/default/objects/Entity__c/fields/Registered_Office_City__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_City__c</fullName>
    <formula>TEXT(Registered_Office_Pincode__r.City__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Office City</label>
    <type>Text</type>
</CustomField>