force-app/main/default/objects/Entity__c/fields/Registered_Office_Country__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Country__c</fullName>
    <formula>Registered_Office_Pincode__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Office Country</label>
    <type>Text</type>
</CustomField>