force-app/main/default/objects/Entity__c/fields/Registered_Office_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registered Office Pincode</label>
    <referenceTo>Active_Pincode__c</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>