force-app/main/default/objects/Entity__c/fields/Registered_Office_State__c.field-meta.xml
<CustomField>
    <fullName>Registered_Office_State__c</fullName>
    <formula>Registered_Office_Pincode__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registered Office State</label>
    <type>Text</type>
</CustomField>