force-app/main/default/objects/Entity__c/fields/ST_Contract_Signatory__c.field-meta.xml
<CustomField>
    <fullName>ST_Contract_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Entities</relationshipLabel>
    <relationshipName>Entities</relationshipName>
    <type>Lookup</type>
</CustomField>