force-app/main/default/objects/Entity__c/fields/Year_1__c.field-meta.xml
<CustomField>
    <fullName>Year_1__c</fullName>
    <label>ITR Year 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>