force-app/main/default/objects/Entity__c/fields/Year_2__c.field-meta.xml
<CustomField>
    <fullName>Year_2__c</fullName>
    <label>ITR Year 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>